--- a/About.html
+++ b/About.html
@@ -73,17 +73,9 @@
             </div>
         </div>
         <div class="text">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing 
-                elit. Sed quam sapiente labore reiciendis ipsa, 
-                saepe quod pariatur, fugiat repellendus magnam 
-                dignissimos accusantium ullam accusamus sunt 
-                officia ducimus! Excepturi, iste ab. amet Lorem 
-                ipsum dolor sit amet consectetur adipisicing elit. 
-                Quia consectetur aspernatur illum deleniti doloremque 
-                voluptate minima facere eligendi 
-                accusantium reiciendis exercitationem 
-                excepturi aut dignissimos odio saepe, 
-                optio laboriosam numquam officiis.
+            <p>Amal paint Nigeria limited has been in existence since 2014, and we believe in living today... tomorrow because our vision always have a lasting impact to all our users across the globe.
+
+                Amal paint Nigeria limited in Nigeria is situated at 7, ajewoye street, agbado kollington lagos state that is founded to improve painting/painters jobs to their desired view and imaginative picture of what they want to acquire with multiple products in the market readily available for Buyers.
             </p>
         </div>
         <div class="ac4">
@@ -128,11 +120,11 @@
                 </div>
                 <div>
                     <h5>Satin</h5>
-                    <img src="img/satin.png" alt="satin">
+                    <img src="img/emulsion.png" alt="satin">
                 </div>
                 <div>
                     <h5>Towel</h5>
-                    <img src="img/emotion.png" alt="">
+                    <img src="img/texcote.png" alt="">
                 </div>
                 <div>
                     <h5>Emulsion</h5>
