--- a/chart.html
+++ b/chart.html
@@ -65,102 +65,192 @@
             </ul>
         </div>
     </div>
-    <div class="Chart">
+    <div id="chart">
         <h3>Color Chart</h3>
         <div class="saint">
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-        </div>
+            <h5>Satin & Emulsion</h5>
+            <div>
+                <div class="paint satin1"></div>
+                <p>Soft White 01</p>
+            </div>
 
-        <div class="gloss">
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
+            <div>
+                <div class="paint satin2"></div>
+                <p>Cream 3040</p>
+            </div>
+
+            <div>
+                <div class="paint satin3"></div>
+                <p>Rich Cream 216</p>
+            </div>
+
+            <div>
+                <div class="paint satin4"></div>
+                <p>Tile Red 1023</p>
+            </div>
+
+            <div>
+                <div class="paint satin5"></div>
+                <p>Brick Red 525</p>
+            </div>
+
+            <div>
+                <div class="paint satin6"></div>
+                <p>Light Green 6070</p>
+            </div>
+
+            <div>
+                <div class="paint satin7"></div>
+                <p>Jade Green  14 E 53</p>
+            </div>
+
+            <div>
+                <div class="paint satin8"></div>
+                <p>Royal Blue 18 E 53</p>
+            </div>
+
+            <div>
+                <div class="paint satin9"></div>
+                <p>Pacific Blue 7084</p>
+            </div>
+
+            <div>
+                <div class="paint satin10"></div>
+                <p>Chocolate 08 B 29</p>
+            </div>
+
+            <div>
+                <div class="paint satin11"></div>
+                <p>Leaf Green 6071</p>
+            </div>
+
+            <div>
+                <div class="paint satin12"></div>
+                <p>Coffee ss 863</p>
+            </div>
+
+            <h5>Gloss & superior</h5>
+            <div>
+                <div class="paint gloss1"></div>
+                <p>Rich Cream 218</p>
+            </div>
+
+            <div>
+                <div class="paint gloss2"></div>
+                <p>mangolia 08 B 15</p>
+            </div>
+
+            <div>
+                <div class="paint gloss3"></div>
+                <p>lemon Yellow 2836</p>
+            </div>
+
+            <div>
+                <div class="paint gloss4"></div>
+                <p>pale Mushroom 3035</p>
+            </div>
+
+            <div>
+                <div class="paint gloss5"></div>
+                <p>Golden Brown 357</p>
+            </div>
+
+            <div>
+                <div class="paint gloss6"></div>
+                <p>Summer Rose 468</p>
+            </div>
+
+            <div>
+                <div class="paint gloss7"></div>
+                <p>National Green SS 784</p>
+            </div>
+
+            <div>
+                <div class="paint gloss8"></div>
+                <p>Bottle Green 793</p>
+            </div>
+
+            <div>
+                <div class="paint gloss9"></div>
+                <p>Arctic Blue 669</p>
+            </div>
+
+            <div>
+                <div class="paint gloss10"></div>
+                <p>Dove Grey 9095</p>
+            </div>
+
+            <div>
+                <div class="paint gloss11"></div>
+                <p>Signal Red 527</p>
+            </div>
+
+            <div>
+                <div class="paint gloss12"></div>
+                <p>Tango 06 E51</p>
+            </div>
+
+
+            <h5>Acrylic Texture Finish</h5>
+            <div>
+                <div class="paint texture1"></div>
+                <p>17 - 29 Concord Grey</p>
+            </div>
+
+            <div>
+                <div class="paint texture2"></div>
+                <p>17 - 13 Brick Red</p>
+            </div>
+
+            <div>
+                <div class="paint texture3"></div>
+                <p>17 - 12 CGosammer</p>
+            </div>
+
+            <div>
+                <div class="paint texture4"></div>
+                <p>17 - 00 Brilliant White</p>
+            </div>
+
+            <div>
+                <div class="paint texture5"></div>
+                <p>17 - 19 Off-White</p>
+            </div>
+
+            <div>
+                <div class="paint texture6"></div>
+                <p>17 - 13 Bamboo</p>
+            </div>
+
+            <div>
+                <div class="paint texture7"></div>
+                <p>17 - 02 cream</p>
+            </div>
+
+            <div>
+                <div class="paint texture8"></div>
+                <p>17 - 11 Coconut Brown</p>
+            </div>
+
+            <div>
+                <div class="paint texture9"></div>
+                <p>17 - 04 Mangolia</p>
+            </div>
+
+            <div>
+                <div class="paint texture10"></div>
+                <p>17 - 03 Sand</p>
+            </div>
+
+            <div>
+                <div class="paint texture11"></div>
+                <p>17 - 07 Butter Creasme</p>
+            </div>
+
+            <div>
+                <div class="paint texture12"></div>
+                <p>17 - 17 Sienna</p>
+            </div>
         </div>
     </div>
     <footer>
