--- a/products.html
+++ b/products.html
@@ -85,7 +85,7 @@
                 </div>
         </div>    
 
-        <div class="container1" data-aos="fade-right" >
+        <div class="container1">
             <section class="section2">
                 <h3>GLOSS</h3>
                 <p>It is our highest sheen poly vinyl emulsion paint 
@@ -100,7 +100,7 @@
             </div>
     </div>  
 
-    <div class="container1" data-aos="fade-left" >
+    <div class="container1">
         <section>
             <h3>EMULSION</h3>
             <p>It is our highest sheen poly vinyl emulsion paint 
